--- a/pawsome-walks/src/styles/large.css
+++ b/pawsome-walks/src/styles/large.css
@@ -161,15 +161,6 @@
   }
 
   .walkPreviewTitle {
-    align-self: flex-start;
-    text-wrap: wrap;
-    width: 100%;
-    display: block;
-    margin: 0;
-    margin-top: 5px;
-    padding: 0;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
     font-size: 24px;
   }
 
@@ -293,18 +284,14 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  .backIcon {
-    justify-content: flex-end;
-    align-self: flex-end;
-    margin: 10px;
-  }
+
   .walkDetailIcon {
     margin: 10px;
   }
   .walkDetailIconContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-top: 10px;
     width: 100%;
     max-width: 1700px;
