--- a/pawsome-walks/src/styles/medium.css
+++ b/pawsome-walks/src/styles/medium.css
@@ -161,14 +161,6 @@
   }
 
   .walkPreviewTitle {
-    align-self: flex-start;
-    width: 100%;
-    display: block;
-    margin: 0;
-    margin-top: 5px;
-    padding: 0;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
     font-size: 20px;
   }
 
@@ -284,11 +276,7 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  .backIcon {
-    justify-content: flex-end;
-    align-self: flex-end;
-    margin: 10px;
-  }
+
   .walkDetailIcon {
     margin: 10px;
   }
